# json-that

./: .gitignore  LICENSE  README.md
examples/: 01_echo.sh  02_schema.sh  03_curl.sh  04_cat.sh  05_provider.sh  06_stream.sh  07_line.sh  README.md
examples/resources/: schema.json
jsonthat/: CONTRIBUTING.md  Makefile  README.md  bump_version.py  pyproject.toml
jsonthat/jsonthat/: main.py  text-to-json-cli.py
jsonthat/tests/: test_main.py
landing/: card-builder.html  card-schema.html  card-simple.html  card.html  card2-schema.html  card2.html  cards.html  index.html  robots.txt  sitemap.xml
